version 3.0-beta
* Completly rewrited for templates support by Aleš Kapica
* New syntax for accesslists

version 2.6
* Added support for PHP codesniffer checks, internal restructuring of code by Siebrand Mazeland
* Fixes to the above change by Thomas Mulhall

version 2.5
* Actualization of description header
* Fix for uninitialize an variable $rights in function wfFromTemplates() and repair of indents in code
* New the variable $wgAccessControlRedirect to allow set display of search results (default is false)
* New language string accesscontrol-info-box in i18n localization file

version 2.4.1
* minor fix in german translationfile
* cosmetic fixes to avoid code style errors

version 2.4.0
* Migrate to JSON i18n

verison 2.3
* Fixed function wfDoRedirect() and wfFromTemplates()
* Removed unused messages from localization file
* New function wfOnUnknownAction()

version 2.2
* Fix for MediaWiki >= 1.21 by unknown AccessControl user

version 2.1
* Fixed security problem with insert protected page, or template

version 2.0
* Completly rewrited for MediaWiki >= 1.18 by Aleš Kapica
* Removed not used variables:
    $wgAccessControlDebug
    $wgAccessControlDebugFile
    $wgAllowInfo
    $wgAllowUserList
    $wgAccessControlMessages

version 1.3
* Gabor Simon fixed problem in function wfGetUsersFromPages()
* Applying patch from Stephan Herrmann

version 1.2
* Fixed errors in parameter fuction wfDoControlUserAccess()
* Repairing while lopp in function getContentTag()

version 1.1
* Fixed security bug with accessibility on protected page over #REDIRECT

version 1.0
* Refactored all code
* Added localization file
* Changed separator on one comma (from double)
* Readonly access is can not only group, but user too

version 0.8
*Fixes for hook errors in MediaWiki 1.11.0 included
*Support for the Group of anonymous users added
*UNIQ/QUINU-Bug kind of fixed (own Link-Parser)

version 0.7
*now it's possible to have read-only groups.
*set the english language as default